SVN
---

	Changes in porg:

	+ Support for missing files. New options -m and -M (see man page).
	+ Better option requirement checking.
	+ Added support for MacOS, and perhaps MacOS X (thanks Masahiro 
	  Kasahara).
	+ When calculating total sizes of packages, sizes of hardlinks to
	  installed files are counted only once (thanks Kardakov Slava).

	Changes in scripts:

	+ porgball: Support logging of tarballs from outside of current working
	  directory (thanks Piotr Karbowski).
	+ porgball: Don't crash when there's no logdir (thanks Piotr Karbowski).
	+ paco2porg: Properly lowercase package names (thanks Kardakov Slava).


Version 0.7 (25 June 2014)
--------------------------

	+ Added missing $(DESTDIR)s to Makefiles.

	Changes in porg:

	+ Check for command line option requirements.
	+ Option -U requires -r.
	+ Added short option -j for --log-missing.
	+ Bugfix: Properly deal with big package sizes (> 4G).

	Changes in grop:

	+ Display a startup info dialog when reading big databases.
	+ Added button "porg suffix" to the porgball creation dialog.
	+ When showing results in the "Find file" dialog, double clicking on a
	  row, or pressing of <Return>, makes the treeview in the main window 
	  scroll to the selected package.
	+ Improved the quality of the grop icon.

	Changes in scripts:

	+ Bugfix: porgball failed to process symbolic links to directories.
	+ Bugfix: paco2porg failed to process missing files.


Version 0.6 (16 June 2014)
--------------------------

	Changes in porg:

	+ Bugfix: porg erroniously complained about command line option
	  incompatibility when some options were doubled (like in '-rr').
	+ Improved the man page and usage output of porg, organizing options by
	  groups. Added a new section 'FILE NAMES WITH SPACES' to the man page. 
	  Reading it is recommended.
	+ Removed path /etc/mtab from the default EXCLUDE.
	+ Search package info in configure.log if config.log is not found.