@@ -54,6 +54,10 @@ void MainTreeView::add_columns()
 	cell = get_column_cell_renderer(id);
 	cell->set_alignment(1, 0.5);
 
+	id = append_column("Files miss.", m_columns.m_nfiles_miss) - 1;
+	cell = get_column_cell_renderer(id);
+	cell->set_alignment(1, 0.5);
+
 	id = append_column("Date", m_columns.m_date) - 1;
 	cell = get_column_cell_renderer(id);
 	cell->set_alignment(1, 0.5);
@@ -95,12 +99,13 @@ void MainTreeView::fill_model()
 
 	for (DB::const_iter p = DB::pkgs().begin(); p != DB::pkgs().end(); ++p) {
 		iterator i = m_model->append();
-		(*i)[m_columns.m_pkg] 		= (*p);
-		(*i)[m_columns.m_name] 		= (*p)->name();
-		(*i)[m_columns.m_size] 		= (*p)->size();
-		(*i)[m_columns.m_nfiles] 	= (*p)->nfiles();
-		(*i)[m_columns.m_date] 		= (*p)->date();
-		(*i)[m_columns.m_summary] 	= (*p)->summary();
+		(*i)[m_columns.m_pkg] 			= (*p);
+		(*i)[m_columns.m_name] 			= (*p)->name();
+		(*i)[m_columns.m_size] 			= (*p)->size();
+		(*i)[m_columns.m_nfiles] 		= (*p)->nfiles();
+		(*i)[m_columns.m_nfiles_miss] 	= (*p)->nfiles_miss();
+		(*i)[m_columns.m_date] 			= (*p)->date();
+		(*i)[m_columns.m_summary] 		= (*p)->summary();
 	}
 }
 
